LPS-78137 fix unaligned user portrait and process title in listview

--- a/modules/apps/web-experience/staging/staging-processes-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/web-experience/staging/staging-processes-web/src/main/resources/META-INF/resources/css/main.scss
@@ -278,6 +278,17 @@
 	}
 }
 
+.process-list-listview {
+	.process-title {
+		line-height: 34px;
+		margin-left: 0.5em;
+	}
+
+	.user-icon {
+		float: left;
+	}
+}
+
 .range-options {
 	margin-right: 5%;
 }
